--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -3552,6 +3552,17 @@ header.pawsitive-header .sub-menu-list-title {
   .kt-tab-title {
   justify-content: center !important;
 }
+.pawsitive-chat .chat-faqs-wrapper .kt-accordion-panel-inner {
+  background-color: #0a4746 !important;
+  padding-top: 0px !important;
+  padding-bottom: 32px !important;
+  padding-left: 32px !important;
+  padding-right: 32px !important;
+}
+.pawsitive-chat .chat-faqs-wrapper .kt-accordion-panel-active {
+  border-bottom-right-radius: 0px !important;
+  border-bottom-left-radius: 0px !important;
+}
 /* footer */
 .pawsitive-chat .footer-bg-green .footer-grid-two > .kt-row-column-wrap {
   max-width: 1082px !important;
